traefik/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: traefik-dashboard
  namespace: kube-system
spec:
  rules:
  - host: dashboard.traefik.127.0.0.1.sslip.io
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
        path: /
        pathType: Prefix
